test/es6/openfl/errors/RangeErrorTest.js
import RangeError from "openfl/errors/RangeError";
var assert = chai.assert;


describe ("ES6 | RangeError", function () {
	
	
	it ("new", function () {
		
		// TODO: Confirm functionality
		
		var rangeError = new RangeError ();
		assert.notEqual (rangeError, null);
		
	});
	
	
});